--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/gudwns0102/react-native-footer-spinner-list/issues"
   },
+  "devDependencies": {
+    "ws": ">=3.3.1"
+  },
   "homepage": "https://github.com/gudwns0102/react-native-footer-spinner-list#readme"
 }
